--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,6 +22,7 @@
                 <div id="box_submit">
                     <input type="submit" value="Enviar" id="enviar">
                 </div>
+                <span id="show_error"></span>
             </form>
         </div>
     </main>
