--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,11 +19,18 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password">
                 </div>
+                <div id="chatpcha_container">
+                    <p>Verifica si eres Humano</p>
+                    <div id="chatpcha_box">
+                        <div id="mostrar_captcha"></div>
+                    </div>
+                    <input type="text" name="captcha" id="captcha">
+                </div>
                 <div id="box_submit">
                     <input type="submit" value="Enviar" id="enviar">
                 </div>
-                <span id="show_error"></span>
             </form>
+            <span id="show_error"></span>
         </div>
     </main>
     <script src="../Assets/js/index.js"></script>
